Name:          order-maintenance
Version:       0.0.0.0
Cabal-Version: >= 1.8
Build-Type:    Simple
License:       BSD3
License-File:  LICENSE
Copyright:     © 2014 Denis Firsov; © 2014 Wolfgang Jeltsch
Author:        Wolfgang Jeltsch
Maintainer:    wolfgang@cs.ioc.ee
Stability:     provisional
Homepage:      http://darcs.wolfgang.jeltsch.info/haskell/order-maintenance
Package-URL:   http://hackage.haskell.org/packages/archive/order-maintenance/0.0.0.0/order-maintenance-0.0.0.0.tar.gz
Synopsis:      Order maintenance
Description:   This package is about order maintenance.
Category:      Data
Tested-With:   GHC == 7.8.3

Source-Repository head

    Type:     darcs
    Location: http://darcs.wolfgang.jeltsch.info/haskell/order-maintenance/main

Source-Repository this

    Type:     darcs
    Location: http://darcs.wolfgang.jeltsch.info/haskell/order-maintenance/main
    Tag:      order-maintenance-0.0.0.0

Library

    Build-Depends: base         >= 3.0 && < 5,
                   transformers >= 0.3 && < 0.5

    Extensions: Rank2Types

    if impl(ghc >= 7.8) {
        Extensions: AutoDeriveTypeable
    }

    Exposed-Modules: Control.Monad.Trans.Order
                     Data.OrderMaintenance

    Other-Modules: Data.OrderMaintenance.Raw

    HS-Source-Dirs: src
