Name:          order-maintenance
Version:       0.0.0.0
Cabal-Version: >= 1.16
Build-Type:    Simple
License:       BSD3
License-File:  LICENSE
Copyright:     © 2014 Denis Firsov; © 2014 Wolfgang Jeltsch
Author:        Wolfgang Jeltsch
Maintainer:    wolfgang@cs.ioc.ee
Stability:     provisional
Homepage:      http://darcs.wolfgang.jeltsch.info/haskell/order-maintenance
Package-URL:   http://hackage.haskell.org/packages/archive/order-maintenance/0.0.0.0/order-maintenance-0.0.0.0.tar.gz
Synopsis:      Several algorithms for the order maintenance problem together
               with a safe and versatile high-level interface
Description:   This package is about order maintenance.
Category:      Data
Tested-With:   GHC == 7.8.3

Source-Repository head

    Type:     darcs
    Location: http://darcs.wolfgang.jeltsch.info/haskell/order-maintenance/main

Source-Repository this

    Type:     darcs
    Location: http://darcs.wolfgang.jeltsch.info/haskell/order-maintenance/main
    Tag:      order-maintenance-0.0.0.0

Library

    Build-Depends: base         >= 3.0 && < 5,
                   containers   >= 0.5 && < 0.6,
                   transformers >= 0.3 && < 0.5

    Default-Language: Haskell2010

    Default-Extensions: EmptyDataDecls
                        ExistentialQuantification
                        FlexibleContexts
                        GeneralizedNewtypeDeriving
                        RankNTypes
                        TypeFamilies

    if impl(ghc >= 7.8) {
        Default-Extensions: AutoDeriveTypeable
    }

    Exposed-Modules: Control.Monad.Trans.Order
                     Control.Monad.Trans.Order.Algorithm

    Other-Modules: Control.Monad.Trans.Order.Algorithm.Dumb
                   Control.Monad.Trans.Order.Algorithm.Type
                   Control.Monad.Trans.Order.Raw

    HS-Source-Dirs: src
